--- a/apps/expo/src/styles.css
+++ b/apps/expo/src/styles.css
@@ -1,5 +1,5 @@
-@tailwind base;
-@tailwind components;
+/* @tailwind base; */
+/* @tailwind components; */
 @tailwind utilities;
 
 :root {
@@ -22,7 +22,7 @@
   --border: 240 5.9% 90%;
   --input: 240 5.9% 90%;
   --ring: 240 5% 64.9%;
-  --radius: 0.5rem;
+  --radius: 0.2rem;
 }
 
 @media (prefers-color-scheme: dark) {
