--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -43,6 +43,7 @@
   --sidebar-ring: oklch(0.708 0 0);
 
   --brand-primary: oklch(0.205 0 0);
+  --success: oklch(0.19 0.22 150);
 }
 
 .dark {
@@ -69,7 +70,7 @@
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.193 0 0);
+  --sidebar: oklch(0.192 0 0);
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.985 0 0);
@@ -79,6 +80,7 @@
   --sidebar-ring: oklch(0.556 0 0);
 
   --brand-primary: oklch(0.68 0.16 277);
+  --success: oklch(0.63 0.17 149);
 }
 
 @theme inline {
@@ -119,6 +121,7 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-brand-primary: var(--brand-primary);
+  --color-success: var(--success);
 
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
